@@ -294,12 +294,9 @@ class Content(FileComponent):
 
 class Owner(FileComponent):
 
-    def configure(self):
-        super(Owner, self).configure()
+    def verify(self):
         if isinstance(self.owner, str):
             self.owner = pwd.getpwnam(self.owner).pw_uid
-
-    def verify(self):
         current = os.stat(self.path).st_uid
         if current != self.owner:
             raise batou.UpdateNeeded()
